--- a/res/layout/input_item.xml
+++ b/res/layout/input_item.xml
@@ -3,16 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal" >
-    <!-- 
-    <LinearLayout
-         android:layout_width="fill_parent"
-   		 android:layout_height="fill_parent"
-   		 android:orientation="horizontal"  -->
-
         <TextView
             android:id="@+id/input_item_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#0000ff"
             android:text="@string/y_equals"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
